cmake_minimum_required(VERSION 3.28)
project(Test C)

set(CMAKE_C_STANDARD 17)

set(SDLSHADERCROSS_DXC OFF CACHE BOOL "")

set(SDLSHADERCROSS_VENDORED ON CACHE BOOL "" FORCE)
set(SDLSHADERCROSS_SPIRVCROSS_SHARED OFF CACHE BOOL "" FORCE)
set(SDLSHADERCROSS_SHARED OFF CACHE BOOL "" FORCE)
set(SDLSHADERCROSS_STATIC ON CACHE BOOL "" FORCE)

add_subdirectory(vendor)
add_subdirectory(src)